--- a/week3/package.json
+++ b/week3/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "rxjs": "^6.5.4",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
